--- a/gk.bib
+++ b/gk.bib
@@ -23124,7 +23124,7 @@ author = {{National Center for Education Statistics}},
 }
 
 @InCollection{BarCaiGol80,
-  author =	 {Barnow, B. S., G. G. Cain, and A. S. Goldberger},
+  author =	 {B. S. Barnow and G. G. Cain and A. S. Goldberger},
   title =	 {Issues in the Analysis of Selectivity Bias},
   booktitle =	 {Evaluation Studies},
   publisher =	 {Sage},
