--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -126,8 +126,10 @@
 
 @Article{KinSen12,
   author = 	 {Gary King and Maya Sen},
-  title = 	 {How Social Science Research 7can Improve Teaching},
-  journal = 	 { },
+  title = 	 {How Social Science Research can Improve Teaching},
+  journal = 	 {PS: Political Science and Politics},
+number=3,
+pages={612--629},
   year = 	 2012,
   note =	 {{http://j.mp/NFVja6}}
 }
@@ -135,23 +137,23 @@
 @Article{KinSen12b,
   author = 	 {Gary King and Maya Sen},
   title = 	 {The Troubled Future of Traditional Colleges and Universities},
-  journal = 	 { },
-  year = 	 {2012},
-  OPTkey = 	 {},
-  OPTvolume = 	 {},
-  OPTnumber = 	 {},
-  q = 	 {},
-  OPTmonth = 	 {},
-  OPTnote = 	 {{http://j.mp/U82gj2}},
-  OPTannote = 	 {}
+  journal = 	 {PS: Political Science and Politics},
+  year = 	 2012,
+  volume = 	 46,
+  number = 	 1,
+  pages = 	 {81--113},
+  note = 	 {{http://j.mp/U82gj2}}
 }
 
-@Article{SonKin11,
+@Article{SonKin12,
   author =	 {Samir Soneji and Gary King},
   title =	 {Statistical Security for Social Security},
   journal =	 {Demography},
-  year =	 2011,
-  note =	 {{http://gking.harvard.edu/files/abs/ssc-abs.shtml}}
+  year =	 2012,
+volume=49,
+number=3,
+pages={1037--1060},
+  note=	 {{http://j.mp/Qvla7N}}
 }
 
 @Article{KinNieCar11b,
@@ -298,9 +300,12 @@
 @Article{KinSon09,
   author =	 {Gary King and Samir Soneji},
   title =	 {The Future of Death in America},
-  journal =	 {},
-  year =	 2009,
-  note =	 {{http://gking.harvard.edu/files/abs/mort-abs.shtml}} 
+  journal =	 {Demographic Research},
+  year =	 2011,
+volume=25,
+number=1,
+pages={1--38},
+  note =	 {{http://j.mp/iXUpBv}} 
 }
 
 @Article{IacKinPor12,
