--- a/gk.bib
+++ b/gk.bib
@@ -23276,7 +23276,41 @@ author = {{National Center for Education Statistics}},
 }
 
 @article{Letetal2013,
-  title={Interpretable classifiers using rules and Bayesian analysis: Building a better stroke prediction model},
-  author={Letham, Benjamin and Rudin, Cynthia and McCormick, Tyler H and Madigan, David},
-  year={2013}
+  title =	 {Interpretable classifiers using rules and Bayesian
+                  analysis: Building a better stroke prediction model},
+  author =	 {Letham, Benjamin and Rudin, Cynthia and McCormick,
+                  Tyler H and Madigan, David},
+  year =	 {2013}
 }
+
+@article{StuMeiFisBas11,
+  author =	 {Stuckler, David and Meissner, Christopher and
+                  Fishback, Price and Basu, Sanjay and McKee, Martin},
+  title =	 {Banking crises and mortality during the Great
+                  Depression: evidence from US urban populations,
+                  1929–1937},
+  year =	 {2011},
+  journal =	 {Journal of Epidemiology and Community Health}
+}
+
+@article{Granados05,
+  author =	 {Granados, José A Tapia},
+  title =	 {Increasing mortality during the expansions of the US
+                  economy, 1900–1996},
+  volume =	 {34},
+  number =	 {6},
+  pages =	 {1194-1202},
+  year =	 {2005},
+  journal =	 {International Journal of Epidemiology}
+}
+
+@article{Ruhm00,
+  author =	 {Ruhm, Christopher J.},
+  title =	 {Are Recessions Good for Your Health?},
+  volume =	 {115},
+  number =	 {2},
+  pages =	 {617-650},
+  year =	 {2000},
+  journal =	 {The Quarterly Journal of Economics}
+}
+
