--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1375,8 +1375,7 @@ pages={1--38},
   pages =	 {443--499},
   month =	 {September},
   number =	 3,
-  note =
-                  {{http://gking.harvard.edu/files/abs/replication-abs.shtml}}
+  note =	 {{http://j.mp/jCyfF1}}
 }
 
 @article{King95b,
