--- a/gk.bib
+++ b/gk.bib
@@ -23314,3 +23314,24 @@ author = {{National Center for Education Statistics}},
   journal =	 {The Quarterly Journal of Economics}
 }
 
+@book{DiaOrs05,
+  title =	 {Saving social security: A balanced approach},
+  author =	 {Diamond, Peter A and Orszag, Peter R},
+  year =	 {2005},
+  publisher =	 {Brookings Institution Press}
+}
+
+@book{Weaver88,
+  title={Automatic government: The politics of indexation},
+  author={R. Kent Weaver},
+  year={1988},
+  publisher={Brookings Institution Press}
+}
+
+@book{Manski13,
+  title =	 {Public policy in an uncertain world: analysis and
+                  decisions},
+  author =	 {Manski, Charles F},
+  year =	 {2013},
+  publisher =	 {Harvard University Press}
+}
