added cites by plam

--- a/gk.bib
+++ b/gk.bib
@@ -239,6 +239,14 @@ howpublished = {NBER}
 	number= 1
 }
 
+@article{AgrSri94,
+	author={Rakesh Agrawal and Ramakrishnan Srikant},
+	title={Fast Algorithms for Mining Association Rules},
+	journal={Proceedings of the 20th VLDB Conference},
+	year={1994},
+	pages={487-499},
+}
+
 @unpublished{AgrRajSri03,
 	author={Rakesh Agrawal and Sridhar Rajagopolan and Ramakrishnan Srikant and Yirong
 		Xu},
@@ -6563,6 +6571,7 @@ OPTannote = {}
 	year={2002},
 	pages={1259--1310}
 }
+
 
 @article{Kawada03,
 	author={Tomoyuki Kawada},
@@ -20148,12 +20157,6 @@ publisher = {Dover Publications},
 year = {1959},
 }
 
-@book{KauRou90,
-author = {L Kaufman and PJ Rousseeuw},
-title = {Finding Groups in Data: An Introduction to Cluster Analysis},
-publisher = {Wiley},
-year = {1990},
-}
 @Article{Washington08,
   author =	 {Ebonya L. Washington},
   title =	 {Female Socialization: How Daughters Affect Their
