--- a/gk.bib
+++ b/gk.bib
@@ -23345,3 +23345,13 @@ author = {{National Center for Education Statistics}},
   month = 	 {7 September},
   year = 	 {2007}
 }
+@Article{Langer04,
+  author =	 {David Langer},
+  title =	 {Scrapping Social Security's Intermediate Cost
+                  Projections},
+  journal =	 {Pension Section News},
+  year =	 2004,
+  volume =	 54,
+  month =	 {March},
+  note =	 {(Letter to the Editor), j.mp/Langer04q}
+}
