--- a/gk.bib
+++ b/gk.bib
@@ -23345,7 +23345,7 @@ author = {{National Center for Education Statistics}},
   publisher =	 {Harvard University Press}
 }
 @Unpublished{Blahous07,
-  author = 	 {Charles P. Blahous III},
+  author = 	 {Charles P. Blahous},
   title = 	 {Have the Social Security Trustees Been Too Consservative?},
   note = 	 {A Presentation at the American Enterprise Institute},
   month = 	 {7 September},
