--- a/gk.bib
+++ b/gk.bib
@@ -23361,3 +23361,37 @@ author = {{National Center for Education Statistics}},
   month =	 {March},
   note =	 {(Letter to the Editor), j.mp/Langer04q}
 }
+
+@InCollection{Gilbert98,
+  author = 	 {Daniel T. Gilbert},
+  title = 	 {Ordinary Psychology},
+  booktitle = 	 {The Handbook of Social Psychology},
+  publisher = {McGraw Hill},
+  year = 	 1998,
+  editor = 	 {Daniel T. Gilbert and Susan T. Fiske and G. Lindzey},
+  volume = 	 2,
+  pages = 	 {89--150},
+  address = 	 {New York}
+}
+@article{WilBre94,
+  title =	 {Mental contamination and mental correction: unwanted
+                  influences on judgments and evaluations.},
+  author =	 {Wilson, Timothy D and Brekke, Nancy},
+  journal =	 {Psychological bulletin},
+  volume =	 {116},
+  number =	 {1},
+  pages =	 {117},
+  year =	 {1994}
+}
+@book{Kahneman11,
+  title =	 {Thinking, fast and slow},
+  author =	 {Kahneman, Daniel},
+  year =	 {2011},
+  publisher =	 {Macmillan}
+}
+@book{Banaji13,
+  title =	 {Blindspot: Hidden biases of good people},
+  author =	 {Banaji, Mahzarin R and Greenwald, Anthony G},
+  year =	 {2013},
+  publisher =	 {Random House LLC}
+}
