--- a/gk.bib
+++ b/gk.bib
@@ -23395,3 +23395,28 @@ author = {{National Center for Education Statistics}},
   year =	 {2013},
   publisher =	 {Random House LLC}
 }
+@book{Altman05,
+	author={Nancy J. Altman},
+	title={The Battle for Social Security: From FDR's Vision to Bush's Gamble},
+	publisher={John Wiley & Sons},
+	year={2005}
+}
+@book{Laursen12,
+	author={Eric Laursen},
+	title={The People's Pension: The Struggle to Defend Social Security Since Reagan},
+	publisher={AK Press},
+	year={2012}
+}
+@book{Blahous10,
+	author={Charles Blahous},
+	title={Social Security: The Unfinished Work},
+	publisher={Hoover Institution Press},
+	year={2010}
+}
+@article{Langer99,
+	author={David Langer},
+	title={Social Security Finances Are in Fine Shape},
+	journal={Contingencies},
+	year={1999},
+	month =	 {May/June}
+}
