--- a/gk.bib
+++ b/gk.bib
@@ -23420,3 +23420,21 @@ author = {{National Center for Education Statistics}},
 	year={1999},
 	month =	 {May/June}
 }
+@book{Beland05,
+	author={Daniel B\{\'{e}}land},
+	title={Social Security: History and Politics from the New Deal to the Privatization Debate},
+	publisher={University Press of Kansas},
+	year={2005}
+}
+@book{BelWad12,
+	author={Daniel B\{\'{e}}land and Alex Waddan},
+	title={The Politics of Policy Change: Welfare, Medicare, and Social Security Reform in the United States},
+	publisher={Georgetown University Press},
+	year={2012}
+}
+@book{Edwards07,
+	author={George C. Edwards III},
+	title={Governing by Campaigning: The Politics of the Bush Presidency},
+	publisher={Longman Publishing},
+	year={2007}
+}
