--- a/gk.bib
+++ b/gk.bib
@@ -22611,7 +22611,7 @@ author = {{National Center for Education Statistics}},
   journal =      {Statistics in Medicine},
   volume =       26,
   number =       6,
-  publisher =    {John Wiley & Sons, Ltd.},
+  publisher =    {John Wiley \& Sons, Ltd.},
   issn =         {1097-0258},
   url =          {http://dx.doi.org/10.1002/sim.2619},
   doi =          {10.1002/sim.2619},
@@ -23398,7 +23398,7 @@ author = {{National Center for Education Statistics}},
 @book{Altman05,
 	author={Nancy J. Altman},
 	title={The Battle for Social Security: From FDR's Vision to Bush's Gamble},
-	publisher={John Wiley & Sons},
+	publisher={John Wiley \& Sons},
 	year={2005}
 }
 @book{Laursen12,
