fixed and added cites

--- a/gk.bib
+++ b/gk.bib
@@ -558,6 +558,18 @@ howpublished = {NBER}
   number =	 5
 }
 
+
+@article{AptDamWei94,
+  author =	 {Chidanand Apte and Fred Damerau and Sholom M. Weiss},
+  title =	 {Automated Learning of Decision Rules for Text Categorization},
+  journal =	 {ACM Transactions on Information Systems},
+  volume =	 {12},
+  year =	 {1993},
+  pages =	 {233-251},
+  number =	 {3}
+}
+
+
 @techreport{Arendt03,
   author =	 {Jacob N. Arendt},
   title =	 {Social gradients in self-rated health in Denmark -
@@ -2435,6 +2447,23 @@ howpublished = {NBER}
 	volume={35, Part 4},
 	year={1973},
 	pages={417-466}
+}
+
+@inproceedings{Cohen96,
+  title={Learning Rules that Classify E-Mail},
+  author={William W. Cohen},
+  booktitle={AAAI Spring Symposium on Machine Learning in Information Access},
+  year={1996},
+}
+
+@article{CohSin99,
+	author={William W. Cohen and Yoram Singer},
+	title={Context-Sensitive Learning Methods for Text Categorization},
+	journal={ACM Transactions on Information Systems},
+	volume={17},
+        number={2},
+	year={1999},
+	pages={141-173}
 }
 
 @article{ColMah93,
@@ -22696,10 +22725,9 @@ author = {{National Center for Education Statistics}},
 @inproceedings{CheXueYu08,
   title={Advertising keyword suggestion based on concept hierarchy},
   author={Chen, Yifan and Xue, Gui-Rong and Yu, Yong},
-  booktitle={Proceedings of the international conference on Web search and web data mining},
+  booktitle={Proceedings of the International Conference on Web Search and Web Data Mining},
   pages={251--260},
   year={2008},
-  organization={ACM}
 }
 
 @article{Turney99,
@@ -22772,28 +22800,26 @@ author = {{National Center for Education Statistics}},
 
 @inproceedings{XuCro96,
 
-  title =	 {Query expansion using local and global document
-                  analysis},
+  title =	 {Query Expansion Using Local and Global Document
+                  Analysis},
   author =	 {Xu, Jinxi and Croft, W Bruce},
-  booktitle =	 {Proceedings of the 19th annual international ACM
-                  SIGIR conference on Research and development in
-                  information retrieval},
+  booktitle =	 {Proceedings of the 19th Annual International ACM
+                  SIGIR Conference on Research and Development in
+                  Information Retrieval},
   pages =	 {4--11},
   year =	 {1996},
-  organization = {ACM}
 }
 
 
 @inproceedings{MitSinBuc98,
 
-  title =	 {Improving automatic query expansion},
+  title =	 {Improving Automatic Query Expansion},
   author =	 {Mitra, Mandar and Singhal, Amit and Buckley, Chris},
-  booktitle =	 {Proceedings of the 21st annual international ACM
-                  SIGIR conference on Research and development in
-                  information retrieval},
+  booktitle =	 {Proceedings of the 21st Annual International ACM
+                  SIGIR Conference on Research and Development in
+                  Information Retrieval},
   pages =	 {206--214},
   year =	 {1998},
-  organization = {ACM}
 }
 
 
@@ -22806,7 +22832,7 @@ author = {{National Center for Education Statistics}},
 
 
 @article{CarRom12,
-  title={A survey of automatic query expansion in information retrieval},
+  title={A Survey of Automatic Query Expansion in Information Retrieval},
   author={Carpineto, Claudio and Romano, Giovanni},
   journal={ACM Computing Surveys (CSUR)},
   volume={44},
@@ -22817,12 +22843,10 @@ author = {{National Center for Education Statistics}},
 }
 
 @inproceedings{Voorhees94,
-  title =	 {Query expansion using lexical-semantic relations},
+  title =	 {Query Expansion Using Lexical-Semantic Relations},
   author =	 {Voorhees, Ellen M},
-  booktitle =	 {SIGIR94},
-  pages =	 {61--69},
+  booktitle =	 {Proceedings of the 17th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval},
   year =	 {1994},
-  organization = {Springer}
 }
 
 
@@ -22848,10 +22872,10 @@ author = {{National Center for Education Statistics}},
 }
 
 
-@inproceedings{Baietal05,
-  title={Query expansion using term relationships in language models for information retrieval},
+@inproceedings{BaiSonBru05,
+  title={Query Expansion Using Term Relationships in Language Models for Information Retrieval},
   author={Bai, Jing and Song, Dawei and Bruza, Peter and Nie, Jian-Yun and Cao, Guihong},
-  booktitle={Proceedings of the 14th ACM international conference on Information and knowledge management},
+  booktitle={Proceedings of the 14th ACM International Conference on Information and Knowledge Management},
   pages={688--695},
   year={2005},
 }
@@ -22870,7 +22894,7 @@ author = {{National Center for Education Statistics}},
 
 
 @article{Caretal09,
-  title={A survey of web clustering engines},
+  title={A Survey of Web Clustering Engines},
   author={Carpineto, Claudio and Osi{\'n}ski, Stanislaw and Romano, Giovanni and Weiss, Dawid},
   journal={ACM Computing Surveys (CSUR)},
   volume={41},
