--- a/gk.bib
+++ b/gk.bib
@@ -23421,14 +23421,17 @@ author = {{National Center for Education Statistics}},
 	month =	 {May/June}
 }
 @book{Beland05,
-	author={Daniel B\{\'{e}}land},
-	title={Social Security: History and Politics from the New Deal to the Privatization Debate},
+        author={Daniel Beland},
+	title={Social Security: History and Politics from the New Deal
+                  to the Privatization Debate},
 	publisher={University Press of Kansas},
 	year={2005}
 }
+
 @book{BelWad12,
-	author={Daniel B\{\'{e}}land and Alex Waddan},
-	title={The Politics of Policy Change: Welfare, Medicare, and Social Security Reform in the United States},
+	author={Daniel Beland and Alex Waddan},
+	title={The Politics of Policy Change: Welfare, Medicare, and
+                  Social Security Reform in the United States},
 	publisher={Georgetown University Press},
 	year={2012}
 }
