--- a/gk.bib
+++ b/gk.bib
@@ -23465,3 +23465,14 @@ author = {{National Center for Education Statistics}},
 	publisher={Longman Publishing},
 	year={2007}
 }
+@article{BirPat10,
+author = {Birnbaum, Michael and Patchias, Elizabeth M.}, 
+title = {Measuring Coverage for Seniors in Medicare Part A and Estimating the Cost of Making It Universal},
+volume = {35}, 
+number = {1}, 
+pages = {49-62}, 
+year = {2010}, 
+doi = {10.1215/03616878-2009-040}, 
+URL = {http://jhppl.dukejournals.org/content/35/1/49.abstract}, 
+journal = {Journal of Health Politics, Policy and Law} 
+}
