adds/changes by patrick

--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -197,8 +197,8 @@ pages={1037--1060},
 }
 
 @article{GriKin11,
-  title =	 {General purpose computer-assisted clustering and
-                  conceptualization},
+  title =	 {General Purpose Computer-Assisted Clustering and
+                  Conceptualization},
   author =	 {Grimmer, Justin and King, Gary},
   journal =	 {Proceedings of the National Academy of Sciences},
   volume =	 {108},
