--- a/gk.bib
+++ b/gk.bib
@@ -23398,14 +23398,14 @@ author = {{National Center for Education Statistics}},
   address = 	 {New York}
 }
 @article{WilBre94,
-  title =	 {Mental contamination and mental correction: unwanted
+  title =        {Mental contamination and mental correction: unwanted
                   influences on judgments and evaluations.},
-  author =	 {Wilson, Timothy D and Brekke, Nancy},
-  journal =	 {Psychological bulletin},
-  volume =	 {116},
-  number =	 {1},
-  pages =	 {117},
-  year =	 {1994}
+  author =       {Wilson, Timothy D and Brekke, Nancy},
+  journal =      {Psychological bulletin},
+  volume =       {116},
+  number =       {1},
+  pages =        {117},
+  year =         {1994}
 }
 @book{Kahneman11,
   title =	 {Thinking, fast and slow},
@@ -23414,65 +23414,81 @@ author = {{National Center for Education Statistics}},
   publisher =	 {Macmillan}
 }
 @book{Banaji13,
-  title =	 {Blindspot: Hidden biases of good people},
-  author =	 {Banaji, Mahzarin R and Greenwald, Anthony G},
-  year =	 {2013},
-  publisher =	 {Random House LLC}
+  title =        {Blindspot: Hidden biases of good people},
+  author =       {Banaji, Mahzarin R and Greenwald, Anthony G},
+  year =         {2013},
+  publisher =    {Random House LLC}
 }
 @book{Altman05,
-	author={Nancy J. Altman},
-	title={The Battle for Social Security: From FDR's Vision to Bush's Gamble},
-	publisher={John Wiley \& Sons},
-	year={2005}
+  author =       {Nancy J. Altman},
+  title =        {The Battle for Social Security: From FDR's Vision to
+                  Bush's Gamble},
+  publisher =    {John Wiley \& Sons},
+  year =         {2005}
 }
 @book{Laursen12,
-	author={Eric Laursen},
-	title={The People's Pension: The Struggle to Defend Social Security Since Reagan},
-	publisher={AK Press},
-	year={2012}
+  author =       {Eric Laursen},
+  title =        {The People's Pension: The Struggle to Defend Social
+                  Security Since Reagan},
+  publisher =    {AK Press},
+  year =         {2012}
 }
 @book{Blahous10,
-	author={Charles Blahous},
-	title={Social Security: The Unfinished Work},
-	publisher={Hoover Institution Press},
-	year={2010}
+  author =       {Charles Blahous},
+  title =        {Social Security: The Unfinished Work},
+  publisher =    {Hoover Institution Press},
+  year =         {2010}
 }
 @article{Langer99,
-	author={David Langer},
-	title={Social Security Finances Are in Fine Shape},
-	journal={Contingencies},
-	year={1999},
-	month =	 {May/June}
+  author =       {David Langer},
+  title =        {Social Security Finances Are in Fine Shape},
+  journal =      {Contingencies},
+  year =         {1999},
+  month =        {May/June}
 }
 @book{Beland05,
-        author={Daniel Beland},
-	title={Social Security: History and Politics from the New Deal
-                  to the Privatization Debate},
-	publisher={University Press of Kansas},
-	year={2005}
+  author =       {Daniel Beland},
+  title =        {Social Security: History and Politics from the New
+                  Deal to the Privatization Debate},
+  publisher =    {University Press of Kansas},
+  year =         {2005}
 }
 
 @book{BelWad12,
-	author={Daniel Beland and Alex Waddan},
-	title={The Politics of Policy Change: Welfare, Medicare, and
-                  Social Security Reform in the United States},
-	publisher={Georgetown University Press},
-	year={2012}
+  author =       {Daniel Beland and Alex Waddan},
+  title =        {The Politics of Policy Change: Welfare, Medicare,
+                  and Social Security Reform in the United States},
+  publisher =    {Georgetown University Press},
+  year =         {2012}
 }
 @book{Edwards07,
-	author={George C. Edwards III},
-	title={Governing by Campaigning: The Politics of the Bush Presidency},
-	publisher={Longman Publishing},
-	year={2007}
+  author =       {George C. Edwards III},
+  title =        {Governing by Campaigning: The Politics of the Bush
+                  Presidency},
+  publisher =    {Longman Publishing},
+  year =         {2007}
 }
 @article{BirPat10,
-author = {Birnbaum, Michael and Patchias, Elizabeth M.}, 
-title = {Measuring Coverage for Seniors in Medicare Part A and Estimating the Cost of Making It Universal},
-volume = {35}, 
-number = {1}, 
-pages = {49-62}, 
-year = {2010}, 
-doi = {10.1215/03616878-2009-040}, 
-URL = {http://jhppl.dukejournals.org/content/35/1/49.abstract}, 
-journal = {Journal of Health Politics, Policy and Law} 
+  author =       {Birnbaum, Michael and Patchias, Elizabeth M.},
+  title =        {Measuring Coverage for Seniors in Medicare Part A
+                  and Estimating the Cost of Making It Universal},
+  volume =       {35},
+  number =       {1},
+  pages =        {49-62},
+  year =         {2010},
+  doi =          {10.1215/03616878-2009-040},
+  URL =
+                  {http://jhppl.dukejournals.org/content/35/1/49.abstract},
+  journal =      {Journal of Health Politics, Policy and Law}
 }
+@Article{RosDeW05,
+  author =       {Robert Rosenblatt and Larry DeWitt},
+  title =        {The Role of Social Security’s Chief
+                  Actuary},
+  journal =      {Contingencies},
+  year =         2005,
+  pages =        {40--45},
+  month =        {July/August},
+  note =         {http://j.mp/ChiefA}
+}
+
