--- a/gk.bib
+++ b/gk.bib
@@ -23491,7 +23491,7 @@ author = {{National Center for Education Statistics}},
   year =         {2012}
 }
 @book{Edwards07,
-  author =       {George C. Edwards III},
+  author =       {George C. {Edwards III}},
   title =        {Governing by Campaigning: The Politics of the Bush
                   Presidency},
   publisher =    {Longman Publishing},
