--- a/gk.bib
+++ b/gk.bib
@@ -23568,3 +23568,12 @@ author = {{National Center for Education Statistics}},
   year =         {2010},
 }
 
+@inproceedings{Hayes90,
+  title =        {CONSTRUE/TIS: A System for Content-Based Indexing of
+                  a Database of News Stories.},
+  author =       {Hayes, Philip J and Weinstein, Steven P},
+  booktitle =    {IAAI},
+  volume =       {90},
+  pages =        {49--64},
+  year =         {1990}
+}
