--- a/gk.bib
+++ b/gk.bib
@@ -23568,7 +23568,7 @@ author = {{National Center for Education Statistics}},
   year =         {2010},
 }
 
-@inproceedings{Hayes90,
+@inproceedings{HayWei90,
   title =        {CONSTRUE/TIS: A System for Content-Based Indexing of
                   a Database of News Stories.},
   author =       {Hayes, Philip J and Weinstein, Steven P},
