--- a/gk.bib
+++ b/gk.bib
@@ -23577,3 +23577,42 @@ author = {{National Center for Education Statistics}},
   pages =        {49--64},
   year =         {1990}
 }
+@article{Slamecka68,
+  title =        {An examination of trace storage in free recall.},
+  author =       {Slamecka, Norman J},
+  journal =      {Journal of experimental psychology},
+  volume =       {76},
+  number =       {4p1},
+  pages =        {504},
+  year =         {1968}
+}
+@article{RoeVoh12,
+  title={Hindsight bias},
+  author={Roese, Neal J and Vohs, Kathleen D},
+  journal={Perspectives on Psychological Science},
+  volume={7},
+  number={5},
+  pages={411--426},
+  year={2012}
+}
+@article{RoeNee82,
+  title =        {Retrieval blocks in episodic and semantic memory.},
+  author =       {Roediger, Henry L and Neely, James H},
+  journal =      {Canadian Journal of Psychology/Revue canadienne de
+                  psychologie},
+  volume =       {36},
+  number =       {2},
+  pages =        {213},
+  year =         {1982}
+}
+@InCollection{Bauml08,
+  author =       {Bauml, Karl-Heinz},
+  title =        {Inhibitory processes},
+  year =         2008,
+  publisher =    {Elsevier},
+  booktitle =    {Cognitive psychology of memory: Vol. 2. Learning and
+                  memory: A comprehensive reference},
+  editor =       {Roediger H.L},
+  pages =        {195–220},
+  address =      {Oxford}
+}
