--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -96,32 +96,49 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Articles
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@Article{KasKinSon14,
+  author =       {Konstantin Kashin and Gary King and Samir Soneji},
+  title =        {Nontransparency and Increasing Bias in U.S.\ Social
+                  Security Administration Forecasts},
+  journal =      { },
+  year =         {2014},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
 @Article{BlaHonKin14a,
-  author = 	 {Matthew Blackwell and James Honaker and Gary King},
-  title = 	 {A Unified Approach to Measurement Error and Missing Data: Overview},
-  journal = 	 { },
-  year = 	 {2014},
-  OPTkey = 	 {},
-  OPTvolume = 	 {},
-  OPTnumber = 	 {},
-  OPTpages = 	 {},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+  author =       {Matthew Blackwell and James Honaker and Gary King},
+  title =        {A Unified Approach to Measurement Error and Missing
+                  Data: Overview},
+  journal =      { },
+  year =         {2014},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
 }
 @Article{BlaHonKin14b,
-  author = 	 {Matthew Blackwell and James Honaker and Gary King},
-  title = 	 {A Unified Approach to Measurement Error and Missing
+  author =       {Matthew Blackwell and James Honaker and Gary King},
+  title =        {A Unified Approach to Measurement Error and Missing
                   Data: Details and Extensions},
-  journal = 	 { },
-  year = 	 {2014},
-  OPTkey = 	 {},
-  OPTvolume = 	 {},
-  OPTnumber = 	 {},
-  OPTpages = 	 {},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+  journal =      { },
+  year =         {2014},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
 }
 
 @Article{KinSen12,
