--- a/gk.bib
+++ b/gk.bib
@@ -23578,16 +23578,16 @@ author = {{National Center for Education Statistics}},
   year =         {1990}
 }
 @article{Slamecka68,
-  title =        {An examination of trace storage in free recall.},
+  title =        {An Examination of Trace Storage in Free Recall},
   author =       {Slamecka, Norman J},
-  journal =      {Journal of experimental psychology},
+  journal =      {Journal of Experimental Psychology},
   volume =       {76},
-  number =       {4p1},
-  pages =        {504},
+  number =       {4},
+  pages =        {504-513},
   year =         {1968}
 }
 @article{RoeVoh12,
-  title={Hindsight bias},
+  title={Hindsight Bias},
   author={Roese, Neal J and Vohs, Kathleen D},
   journal={Perspectives on Psychological Science},
   volume={7},
@@ -23596,23 +23596,23 @@ author = {{National Center for Education Statistics}},
   year={2012}
 }
 @article{RoeNee82,
-  title =        {Retrieval blocks in episodic and semantic memory.},
+  title =        {Retrieval Blocks in Episodic and Semantic Memory},
   author =       {Roediger, Henry L and Neely, James H},
   journal =      {Canadian Journal of Psychology/Revue canadienne de
                   psychologie},
   volume =       {36},
   number =       {2},
-  pages =        {213},
+  pages =        {213-242},
   year =         {1982}
 }
 @InCollection{Bauml08,
   author =       {Bauml, Karl-Heinz},
-  title =        {Inhibitory processes},
+  title =        {Inhibitory Processes},
   year =         2008,
   publisher =    {Elsevier},
   booktitle =    {Cognitive psychology of memory: Vol. 2. Learning and
                   memory: A comprehensive reference},
   editor =       {Roediger H.L},
-  pages =        {195–220},
+  pages =        {195-220},
   address =      {Oxford}
 }
