--- a/gk.bib
+++ b/gk.bib
@@ -23610,8 +23610,8 @@ author = {{National Center for Education Statistics}},
   title =        {Inhibitory processes},
   year =         2008,
   publisher =    {Elsevier},
-  booktitle =    {Cognitive psychology of memory: Vol. 2. Learning and
-                  memory: A comprehensive reference},
+  booktitle =    {Learning and memory: A comprehensive reference,
+                  Volume 2: Cognitive psychology of memory},
   editor =       {Roediger H.L},
   pages =        {195–220},
   address =      {Oxford}
