--- a/gk.bib
+++ b/gk.bib
@@ -21109,11 +21109,14 @@ journal = {Science}
 
 
 @techreport{GarGle08,
-	author={Erik A. Gartzke and Kristian Skrede Gleditsch},
-	title={{The Ties that Bias: Specifying and Operationalizing Components of Dyadic Dependence in International Conflict}},
-	year= 2008,
-	month={May},
-	type={Working Papers}
+  author =       {Erik A. Gartzke and Kristian Skrede Gleditsch},
+  title =        {{The Ties that Bias: Specifying and Operationalizing
+                  Components of Dyadic Dependence in International
+                  Conflict}},
+  year =         2008,
+  month =        {May},
+  institution =  {UCSD},
+  type =         {Working Papers}
 }
 
 
