--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1885,6 +1885,18 @@ pages={1--38},
 % Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@Article{KinRob14,
+  author =       {Gary King and Margaret Roberts},
+  title =        {Replication Data for: How Robust Standard Errors
+                  Expose Methodological Problems They Do Not Fix, and
+                  What to Do About It},
+  journal =      { },
+  year =         2014,
+  note =         {\underline{UNF:5:Bc1yVsbYLpjnS0Bx6FDnNA==}
+                  http://dx.doi.org/10.7910/DVN/26935 IQSS Dataverse
+                  Network [Distributor]}
+}
+
 @Article{IacKinPor11b,
   author =	 {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =	 {Replication data for: Causal Inference Without
