--- a/gk.bib
+++ b/gk.bib
@@ -23619,3 +23619,15 @@ author = {{National Center for Education Statistics}},
   pages =        {195-220},
   address =      {Oxford}
 }
+
+@article{AutDug06,
+  Author =       {Autor, David H. and Duggan, Mark G.},
+  Title =        {The Growth in the Social Security Disability Rolls:
+                  A Fiscal Crisis Unfolding},
+  Journal =      {Journal of Economic Perspectives},
+  Volume =       {20},
+  Number =       {3},
+  Year =         {2006},
+  Pages =        {71-96},
+  DOI =          {10.1257/jep.20.3.71}
+}
