--- a/gk.bib
+++ b/gk.bib
@@ -23631,3 +23631,23 @@ author = {{National Center for Education Statistics}},
   Pages =        {71-96},
   DOI =          {10.1257/jep.20.3.71}
 }
+@article{Pearl10,
+  title =        {The foundations of causal inference},
+  author =       {Pearl, Judea},
+  journal =      {Sociological Methodology},
+  volume =       {40},
+  number =       {1},
+  pages =        {75--149},
+  year =         {2010},
+  publisher =    {Wiley Online Library}
+}
+@article{VanShp11,
+  title =        {A new criterion for confounder selection},
+  author =       {VanderWeele, Tyler J and Shpitser, Ilya},
+  journal =      {Biometrics},
+  volume =       {67},
+  number =       {4},
+  pages =        {1406--1413},
+  year =         {2011},
+  publisher =    {Wiley Online Library}
+}
