--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1892,9 +1892,9 @@ pages={1--38},
                   What to Do About It},
   journal =      { },
   year =         2014,
-  note =         {\underline{UNF:5:Bc1yVsbYLpjnS0Bx6FDnNA==}
-                  http://dx.doi.org/10.7910/DVN/26935 IQSS Dataverse
-                  Network [Distributor]}
+  note =         {UNF:5:Bc1yVsbYLpjnS0Bx6FDnNA==
+                  \underline{http://dx.doi.org/10.7910/DVN/26935} IQSS
+                  Dataverse Network [Distributor]}
 }
 
 @Article{IacKinPor11b,
