--- a/gk.bib
+++ b/gk.bib
@@ -16400,8 +16400,14 @@ pages =	 {186-200}
   year =	 2007,
   address =	 {Cambridge}
 }
-
-
+@Book{MorWin14,
+  author =	 {Stephen L. Morgan and Christopher Winship},
+  title =	 {Counterfactuals and Causal Inference: Methods and
+                  Principles for Social Research, 2nd edn},
+  publisher =	 {Cambridge University Press},
+  year =	 2014,
+  address =	 {Cambridge}
+}
 @Article{AbaImb07,
   author =	 {Alberto Abadie and Guido W. Imbens},
   title =	 {Bias-Corrected Matching Estimators for Average
@@ -23649,5 +23655,27 @@ author = {{National Center for Education Statistics}},
   number =       {4},
   pages =        {1406--1413},
   year =         {2011},
+  publisher =    {Wiley Online Library}
+}
+@article{Lin2013,
+  title =        {Agnostic notes on regression adjustments to
+                  experimental data: Reexamining Freedman’s critique},
+  author =       {Lin, Winston and others},
+  journal =      {The Annals of Applied Statistics},
+  volume =       {7},
+  number =       {1},
+  pages =        {295--318},
+  year =         {2013}
+}
+@article{MirSekYu13,
+  title =        {Adjusting treatment effect estimates by
+                  post-stratification in randomized experiments},
+  author =       {Miratrix, Luke W and Sekhon, Jasjeet S and Yu, Bin},
+  journal =      {Journal of the Royal Statistical Society: Series B
+                  (Statistical Methodology)},
+  volume =       {75},
+  number =       {2},
+  pages =        {369--396},
+  year =         {2013},
   publisher =    {Wiley Online Library}
 }
