--- a/gk.bib
+++ b/gk.bib
@@ -16400,19 +16400,14 @@ pages =	 {186-200}
   year =	 2014,
   address =	 {Cambridge}
 }
-@Article{AbaImb07,
-  author =	 {Alberto Abadie and Guido W. Imbens},
-  title =	 {Bias-Corrected Matching Estimators for Average
-                  Treatment Effects},
-  journal =	 { },
-  year =	 {2007},
-  OPTkey =	 {},
-  OPTvolume =	 {},
-  OPTnumber =	 {},
-  OPTpages =	 {},
-  OPTmonth =	 {},
-  note =	 {{http://ksghome.harvard.edu/~aabadie/research.html}},
-  OPTannote =	 {}
+@article{AbaImb11,
+  title =        {Bias-corrected matching estimators for average
+                  treatment effects},
+  author =       {Abadie, Alberto and Imbens, Guido W},
+  journal =      {Journal of Business \& Economic Statistics},
+  volume =       {29},
+  number =       {1},
+  year =         {2011}
 }
 @Book{Jevons1874,
   author =	 {W. Stanley Jevons},
