--- a/gk.bib
+++ b/gk.bib
@@ -139,10 +139,10 @@ title =	 {Matching on the estimated Propensity Score},
 year =	 2011,
 howpublished = {NBER}
 }
-@misc{AbaImb11,
-  author =	 {Alberto Abadie and Guido Imbens},
-  title =	 {A Martingale Representation for Matching Estimators},
-  year =	 2011,
+@misc{AbaImb11c,
+  author =       {Alberto Abadie and Guido Imbens},
+  title =        {A Martingale Representation for Matching Estimators},
+  year =         2011,
   howpublished = {NBER}
 }
 
@@ -23394,7 +23394,7 @@ author = {{National Center for Education Statistics}},
   publisher =	 {Harvard University Press}
 }
 @Unpublished{Blahous07,
-  author = 	 {Charles P. Blahous},
+  author = 	 {Charles P. {Blahous, III}},
   title = 	 {Have the Social Security Trustees Been Too Consservative?},
   note = 	 {A Presentation at the American Enterprise Institute},
   month = 	 {7 September},
@@ -23459,7 +23459,7 @@ author = {{National Center for Education Statistics}},
   year =         {2012}
 }
 @book{Blahous10,
-  author =       {Charles Blahous},
+  author =       {Charles P. {Blahous, III}},
   title =        {Social Security: The Unfinished Work},
   publisher =    {Hoover Institution Press},
   year =         {2010}
@@ -23644,7 +23644,7 @@ author = {{National Center for Education Statistics}},
   year =         {2011},
   publisher =    {Wiley Online Library}
 }
-@article{Lin2013,
+@article{Lin13,
   title =        {Agnostic notes on regression adjustments to
                   experimental data: Reexamining Freedman’s critique},
   author =       {Lin, Winston and others},
