--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -98,12 +98,12 @@
 % Articles
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-@Article{KasKinSon14,
+@Article{KasKinSon15a,
   author =       {Konstantin Kashin and Gary King and Samir Soneji},
   title =        {Nontransparency and Increasing Bias in U.S.\ Social
                   Security Administration Forecasts},
-  journal =      { },
-  year =         {2014},
+  journal =      {Journal of Economic Perspectives},
+  year =         {2015},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
@@ -111,6 +111,31 @@
   OPTmonth =     {},
   OPTnote =      {},
   OPTannote =    {}
+}
+@Article{KasKinSon15b,
+  author =       {Konstantin Kashin and Gary King and Samir Soneji},
+  title =        {Explaining Nontransparency and Increasing Bias in
+                  U.S.\ Social Security Administration Forecasts},
+  journal =      { },
+  year =         {2015},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+@Article{KasKinSon15c,
+  author =       {Konstantin Kashin and Gary King and Samir Soneji},
+  title =        {Replication Data for: Nontransparency and Increasing
+                  Bias in U.S.\ Social Security Administration
+                  Forecasts},
+  journal =      { },
+  year =         2015,
+  note =         {UNF:5:6BIXdKbAVG6c+oLOc6a+1A==
+                  \underline{http://dx.doi.org/10.7910/DVN/28122}
+                  Harvard Dataverse [Distributor] V1 [Version]}
 }
 
 @Article{BlaHonKin14a,
