--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -138,6 +138,18 @@
                   Harvard Dataverse [Distributor] V1 [Version]}
 }
 
+@Article{KasKinSon15d,
+  author =       {Konstantin Kashin and Gary King and Samir Soneji},
+  title =        {Replication Data for: Explaining Nontransparency and
+                  Increasing Bias in U.S.\ Social Security
+                  Administration Forecasts},
+  journal =      { },
+  year =         2015,
+  note =         {UNF:5:zSxQq7uBfHzcE3x4F4XkjQ==
+                  \underline{http://dx.doi.org/10.7910/DVN/28323}
+                  Harvard Dataverse [Distributor] V1 [Version] }
+}
+
 @Article{BlaHonKin14a,
   author =       {Matthew Blackwell and James Honaker and Gary King},
   title =        {A Unified Approach to Measurement Error and Missing
