--- a/gk.bib
+++ b/gk.bib
@@ -20714,18 +20714,13 @@ journal = {Science}
 }
 
 @Article{VanHer12,
-  author =	 {Tyler J. VanderWeele and Miguel A. Hernan},
-  title =	 {Causal Inference Under Multiple Versions of
+  author =       {Tyler J. VanderWeele and Miguel A. Hernan},
+  title =        {Causal Inference Under Multiple Versions of
                   Treatment},
-  journal =	 {COBRA Preprint Series},
-  year =	 {2012},
-  OPTkey =	 {},
-  OPTvolume =	 {},
-  OPTnumber =	 {},
-  OPTpages =	 {},
-  OPTmonth =	 {},
-  OPTnote =	 {{http://biostats.bepress.com/cobra/ps/art77}},
-  OPTannote =	 {}
+  journal =      {Journal of Causal Inference},
+  year =         2012,
+  volume =       1,
+  pages =        {1--20}
 }
 
 @Article{Robins86,
