--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -109,7 +109,7 @@
   OPTnumber =    {},
   OPTpages =     {},
   OPTmonth =     {},
-  OPTnote =      {},
+  note =      {in press},
   OPTannote =    {}
 }
 @Article{KasKinSon15b,
