--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -98,6 +98,21 @@
 % Articles
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@Article{IacKinPor15,
+  author =       {Stefano M. Iacus and Gary King and Giuseppe Porro},
+  title =        {A Theory of Statistical Inference for Matching
+                  Methods in Applied Causal Research},
+  journal =      { },
+  year =         {2015},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  note =         {http://j.mp/Nt9TkZ},
+  OPTannote =    {}
+}
+
 @Article{KasKinSon15a,
   author =       {Konstantin Kashin and Gary King and Samir Soneji},
   title =        {Nontransparency and Increasing Bias in U.S.\ Social
